adds second player secret targets, cleans classes and text off board on restart

--- a/style.css
+++ b/style.css
@@ -119,6 +119,9 @@ h3 {
 .gameGrid.secretGrid li.target {
   background-color: slateblue;
 }
+.gameGrid.secretGrid li.target.hit {
+  background-color: darkred;
+}
 .gameGrid.rivalGrid {
   font-size: 1.8em;
 }
