--- a/style.less
+++ b/style.less
@@ -151,6 +151,9 @@ h3 {
       &.target {
         background-color: @targetColor;
       }
+      &.target.hit {
+        background-color: @hitColor;        
+      }
     }  
   }
 
